<resources>
    <string name="app_name">Fiap Android</string>

    <!--Adivinhe-->
    <string name="strainger_doctor_desc">Strainger Doctor Image</string>
    <string name="edit_text_go">Informe seu chute</string>
    <string name="button_go">CHUTAR</string>
    <string name="tv_last_score">Último chute</string>

    <!--TimeS2-->
    <string name="time_titulo">Time S2</string>
    <string name="time_desenvolvido_por">Desenvolvido por @alextavella</string>
    <string name="time_hint_name">Name</string>
    <string name="time_hint_age">Age</string>
    <string name="time_select">Selecione o time</string>
    <string name="time_select_cor">Corinthians</string>
    <string name="time_select_san">Santos</string>
    <string name="time_select_sao">São Paulo</string>
    <string name="time_select_pal">Palmeiras</string>
    <string name="time_btn_cadastrar">Cadastrar</string>
    <string name="time_info_msg_confirm">Olá %1$s, parabéns por torcer pelo %2$s!</string>

</resources>
