<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_adivinhe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_default"
    android:weightSum="1"
    tools:context="com.alextavella.oadivinho.AdivinheActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        android:contentDescription="@string/strainger_doctor_desc"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/strainger_doctor" />

    <EditText
        android:id="@+id/etChuteJogador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        android:hint="@string/edit_text_go"
        android:inputType="number" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="go"
        android:text="@string/button_go"
        android:textAllCaps="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        android:text="@string/tv_last_score" />

    <TextView
        android:id="@+id/tvUltimoChute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        android:gravity="center"
        android:textSize="@dimen/tv_last_score"
        tools:text="0" />

</LinearLayout>
