<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_time"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_default"
    tools:context="com.alextavella.oadivinho.TimeActivity">

    <TextView
        android:id="@+id/tvTop"
        style="@style/label_time_s2"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tvBottom"
        android:layout_below="@+id/tvTop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/time_hint_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/time_hint_age"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spTimes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/times" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="register"
                android:text="@string/time_btn_cadastrar" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tvBottom"
        style="@style/label_desenvolvido_por"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
